--- a/src/style/main.css
+++ b/src/style/main.css
@@ -24,6 +24,16 @@ body {
     color: whitesmoke;
 }
 
+dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 900px;
+    height: 800PX;
+}
+
 .body-Header {
     display: flex;
     padding: 20px;
@@ -74,7 +84,7 @@ body {
     margin-right: 8px;
 }
 
-.containerList {
+#containerList {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,6 +102,7 @@ table {
 th {
     font-family: "Amatic";
     font-weight: bolder;
+    font-size: large;
 }
 
 th, td {
@@ -115,6 +126,7 @@ th:nth-child(2), td:nth-child(2) {
 
 td:nth-child(2) {
     text-align: left;
+    padding-left: 10px;
 }
 
 th:nth-child(3), td:nth-child(3) {
