--- a/src/style/newtask.css
+++ b/src/style/newtask.css
@@ -1,18 +1,83 @@
 @charset "UFT-8";
 
-.main-container{
-    width: 100%;
-    height: 100%;
-    display: flex ;
-    align-items: center;
-    justify-content: center;
+:root {
+    --background-btn: #011b50;
+    --background-color: #070f1f;
+    --blue-light: #035db1;
+    --color-font: #1DD3B0;
 
-    padding: 50px;
+    --default-font: "Bebas Neue", sans-serif; 
 }
-.addTask {
-    width: 800px;
-    height: 800px;
 
+dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 0ch;
+    border-radius: 50px;
+    box-shadow: 0px 0px 70px #0339a57c;
+    background-color: var(--background-btn);
+
+    color: whitesmoke;
+
+    width: fit-content;
+    height: fit-content;
+    padding: 40px;
+}
+
+.addTask input {
+    width: 500px;
+    height: 40px;
+    font-size: 18px;
+    padding-left: 5px;
+
+    border-radius: 5px;
+    border: 0px;
+    outline: none;
+}
+
+.addTask > div {
+    margin-bottom: 30px;
+}
+
+.date {
     display: flex;
-    flex-direction: column;
+    flex: auto;
+    justify-content: space-around; 
+}
+
+.containerNewTask {
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
+
+#inpDate {
+    width: fit-content;
+}
+
+#inpStatus {
+    width: 100px;
+    height: 42px;
+    font-size: 18px;
+    padding-left: 3px;
+}
+
+#submitTask {
+    width: 150px;
+    height: 50px;
+    pad: 3px;
+    font-size: 18px;
+
+    border: 0ch;
+    border-radius: 10px;
+
+    background-image: linear-gradient(to top, rgb(1, 75, 1), rgb(100, 165, 2));
+    color: whitesmoke;
+}
+
+#submitTask:hover {
+    cursor: pointer;
+    text-decoration: underline;
 }
