--- a/src/style/newtask.css
+++ b/src/style/newtask.css
@@ -26,7 +26,12 @@ dialog {
     padding: 40px;
 }
 
-.addTask input {
+.editTaskDialog {
+    display: flex;
+    flex-direction: column;
+}
+
+.addTask input{
     width: 500px;
     height: 40px;
     font-size: 18px;
@@ -37,7 +42,19 @@ dialog {
     outline: none;
 }
 
-.addTask > div {
+.editTask input {
+    width: 500px;
+    height: 40px;
+    font-size: 18px;
+    padding-left: 5px;
+    
+    border-radius: 5px;
+    border: 0px;
+    outline: none;
+    
+}
+
+.addTask > div, .editTask > div  {
     margin-bottom: 30px;
 }
 
@@ -50,21 +67,55 @@ dialog {
 .containerNewTask {
     display: flex;
     align-items: end;
-    justify-content: center;
+    justify-content: space-around;
 }
 
-#inpDate {
+.containerEditTask {
+    margin-top: 30px;
+
+    display: flex;
+    flex: auto;
+    justify-content: space-around; 
+}
+
+#inpDate, #editDate {
     width: fit-content;
 }
 
-#inpStatus {
+#inpStatus, #editStatus {
     width: 100px;
     height: 42px;
     font-size: 18px;
     padding-left: 3px;
 }
 
-#submitTask {
+#saveTask {
+    width: 150px;
+    height: 50px;
+    pad: 3px;
+    font-size: 18px;
+
+    border: 0ch;
+    border-radius: 10px;
+
+    background-image: linear-gradient(to top, rgb(3, 32, 126), rgb(4, 146, 189));
+    color: whitesmoke;
+}
+
+#cancel {
+    width: 150px;
+    height: 50px;
+    pad: 3px;
+    font-size: 18px;
+
+    border: 0ch;
+    border-radius: 10px;
+
+    background-image: linear-gradient(to top, rgb(49, 1, 1), rgb(133, 1, 1));
+    color: whitesmoke;
+}
+
+#submitTask{
     width: 150px;
     height: 50px;
     pad: 3px;
@@ -77,7 +128,7 @@ dialog {
     color: whitesmoke;
 }
 
-#submitTask:hover {
+#submitTask:hover , #saveTask:hover, #cancel:hover {
     cursor: pointer;
     text-decoration: underline;
 }
